--- a/package.json
+++ b/package.json
@@ -11,18 +11,21 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.5.1",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@sanity/icons": "^3.5.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.65.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "framer-motion": "^11.13.1",
     "lucide-react": "^0.462.0",
     "next": "15.0.3",
     "next-sanity": "^9.8.19",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^19.0.0-rc-66855b96-20241106",
+    "react-dom": "^19.0.0-rc-66855b96-20241106",
     "sanity": "^3.65.1",
     "styled-components": "^6.1.13",
     "tailwind-merge": "^2.5.5",
